overflow bug fixed

--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,8 @@
 /* Note: You may need to change the path to fit your project structure */
 @source "./**/*.{js,ts,jsx,tsx}";
 @custom-variant dark (&:is(.dark *));
+
+html, body {
+  overflow-x: hidden;
+}
+
